Fix collapse and improves mobal

--- a/assets/styles/Layout/health.scss
+++ b/assets/styles/Layout/health.scss
@@ -4,7 +4,7 @@
 
   @include breakpoint-xs {
     flex-direction: column;
-    padding: 0 15px;
+    padding: 40px 15px;
     align-items: center;
     justify-content: center;
   }
@@ -30,11 +30,11 @@
     }
 
     &__box {
-      position: relative;
+      margin-top: 20px;
       padding: 10px 50px;
       background-color: #fff;
       width: 87%;
-      height: 200px;
+      min-height: 160px;
       box-shadow: 1px 15px 12px 6px rgba(164,164,164,0.62);
 
       @include breakpoint-xs {
@@ -42,25 +42,30 @@
         width: 100%;
       }
 
-      &::before {
-        content: 'close svg ??????? modal ???? :)';
-        position: absolute;
-        right: 20px;
-        top: 20px;
-
-        @include breakpoint-xs {
-          display: none;
-        }
-      }
-
       &--title {
-        margin-bottom: 20px;
+        padding: 0 20px;
       }
 
       &--description {
         font-size: $font-size-description--sm;
         letter-spacing: .4px;
         color: $text-color;
+        padding: 20px;
+      }
+
+      &__collapse {
+        border-top: 1px solid $bg-color;
+        border-bottom: 1px solid $bg-color;
+        padding: 15px 0;
+
+        @include breakpoint-xs {
+          padding: 15px;
+        }
+        
+        > span {
+          color: $title-color;
+          font-weight: 700;
+        }
       }
     }
   }
